--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,32 @@
 
 * {
     font-family: "Red-Hat-Display", sans-serif;
+    margin: 0;
+}
+
+body {
+    height: 100vh;
+    background-color: var(--paleblue);
+}
+
+.component-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bg-img {
+    width: 100%;
+    height: 50vh;
+    position: absolute;
+}
+
+.component {
+    width: 400px;
+    height: 750px;
+    background-color: white;
+    position: relative;
+    border-radius: 1.5em;
+    box-shadow: 2px 2px 10px 1px grey;
 }
