--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 * {
     font-family: "Red-Hat-Display", sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -23,6 +24,12 @@ body {
     justify-content: center;
 }
 
+.component-img {
+    width: 100%;
+    border-top-left-radius: 1.5em;
+    border-top-right-radius: 1.5em;
+}
+
 .bg-img {
     width: 100%;
     height: 50vh;
@@ -31,9 +38,107 @@ body {
 
 .component {
     width: 400px;
-    height: 750px;
+    height: 650px;
     background-color: white;
     position: relative;
     border-radius: 1.5em;
     box-shadow: 2px 2px 10px 1px grey;
+}
+
+.component-content-wrap {
+    padding: 3em 3em;
+}
+
+.title {
+    font-weight: 700;
+    color: var(--darkblue);
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.subtitle {
+    font-weight: 500;
+    color: var(--desaturatedblue);
+    text-align: center;
+    margin-bottom: 45px;
+}
+
+.plan-wrap {
+    display: flex;
+    height: 100%;
+    margin-bottom: 3em;
+}
+
+.music-svg {
+    margin-right: 15px;
+}
+
+.spacebetween {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.txt-plan-wrap :nth-child(1) {
+    font-weight: 700;
+    color: var(--darkblue);
+    margin-bottom: 10px;
+}
+
+.txt-plan-wrap :nth-child(2) {
+    font-weight: 500;
+    color: var(--desaturatedblue);
+    font-weight: 500;
+}
+.spacebetween > p {
+    color: var(--brighblue);
+    text-decoration: underline var(--brighblue);
+    font-weight: 700;
+    height: fit-content;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.spacebetween > p:hover {
+    text-decoration: none;
+    color: hsl(244, 98%, 71%);
+    cursor: pointer;
+}
+
+.button {
+    width: 100%;
+    height: 3em;
+    font-family: "Red Hat Display", sans-serif;
+    background-color: hsl(244, 100%, 55%);
+    border: none;
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 1px grey;
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+
+.button:hover {
+    background-color: hsl(244, 98%, 71%);
+}
+
+.cancel {
+    color: grey;
+    font-weight: 700;
+    width: fit-content;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cancel:hover {
+    color: black;
+    cursor: pointer;
+}
+
+@media (max-width: 600px) {
+    .bg-img {
+        display: none;
+    }
 }
